--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,4 @@ CSV_Preprocessor
 /results-old
 kernelGenius
 /K-Means-GPU/Intel® VTune™ Profiler Results/K-Means-GPU/K-Means-GPU.vtuneproj
+*.zip
