--- a/.gitignore
+++ b/.gitignore
@@ -376,3 +376,4 @@ CSV_Preprocessor
 /results
 /results-old
 /K-Means-GPU/Intel® VTune™ Profiler Results/K-Means-GPU/K-Means-GPU.vtuneproj
+/all-results.xlsx
