--- a/.gitignore
+++ b/.gitignore
@@ -378,3 +378,4 @@ CSV_Preprocessor
 /K-Means-GPU/Intel® VTune™ Profiler Results/K-Means-GPU/K-Means-GPU.vtuneproj
 /all-results.xlsx
 /ScreenshotsGpu.zip
+/ScreenshotsGpu
