--- a/.gitignore
+++ b/.gitignore
@@ -380,3 +380,6 @@ CSV_Preprocessor
 /ScreenshotsGpu.zip
 /ScreenshotsGpu
 documentazione/
+/launcher.sh.bak
+/documentazione/normalMicroArch.png
+/documentazione/presentazione.pptx
