--- a/.gitignore
+++ b/.gitignore
@@ -381,3 +381,24 @@ kernelGenius
 *.zip
 /all-results.xlsx
 /ScreenshotsGpu.zip.crdownload
+/documentazione/cpu-186.svg
+/documentazione/cpu-1st-opt.png
+/documentazione/cpu-239.svg
+/documentazione/cpu-2nd-opt.png
+/documentazione/cpu-compression-rate.svg
+/documentazione/cpu-exec-time.svg
+/documentazione/cpu-large-th.svg
+/documentazione/cpu-normal.png
+/documentazione/cpu-opt-speedup.svg
+/documentazione/cpu-opt-time.svg
+/documentazione/cpu-speedup.svg
+/documentazione/gpu-exec-time-opt-comparison.svg
+/documentazione/gpu-exec-time-opt.svg
+/documentazione/gpu-exec-time.svg
+/documentazione/gpu-speedup-opt-comparison.svg
+/documentazione/gpu-speedup-opt.svg
+/documentazione/gpu-speedup.svg
+/documentazione/local-mem-overhead-32.png
+/documentazione/local-mem-overhead-8192.png
+/documentazione/presentazione.pptx
+/ScreenshotsGpu
